fix pre-wrap

--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,9 @@ body {
 h1 {
     text-align: center;
 }
+pre {
+    white-space: pre-wrap; 
+}
 .chat-container {
     height: 88vh;
     width: 80vw;
